src/objects/NEO_Facility_Audit__c.object
<CustomObject>
    <description>NEO</description>
    <fields>
        <fullName>All_cards_turned_in__c</fullName>
        <description>Cards been turned in to union staff</description>
        <inlineHelpText>Cards been turned in to union staff</inlineHelpText>
        <label>All cards turned in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilty</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>New_Employee_Orientations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Getfeedback_API__c</fullName>
        <description>Getfeedback API id</description>
        <inlineHelpText>Getfeedback API Id</inlineHelpText>
        <label>Getfeedback API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEO_Date__c</fullName>
        <description>NEO Date</description>
        <inlineHelpText>NEO Date</inlineHelpText>
        <label>NEO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Employee_Not_Signed_Card__c</fullName>
        <description>Names, dept and reason for New Employee who did not signed card</description>
        <inlineHelpText>Names, dept and reason for New Employee who did not signed card</inlineHelpText>
        <label>New Employee Who Did Not Signed Card</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Leaders_Activists__c</fullName>
        <description>Potential Leaders/Activists Names,Dept,Reason</description>
        <inlineHelpText>Potential Leaders/Activists Names,Dept,Reason</inlineHelpText>
        <label>Potential Leaders/Activists</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presenter_Name__c</fullName>
        <description>Presenter Name(s) at NEO.</description>
        <inlineHelpText>Presenter Name(s) at NEO.</inlineHelpText>
        <label>Presenter Name(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_BU_Members_Attended__c</fullName>
        <description>Total bargaining unit members attended</description>
        <inlineHelpText>Total bargaining unit members attended</inlineHelpText>
        <label>Total BU Members Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Signed_Membership_Cards__c</fullName>
        <description>Total signed membership cards</description>
        <inlineHelpText>Total signed membership cards</inlineHelpText>
        <label>Total Signed Membership Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Signed_Up_COPE__c</fullName>
        <description>Total Signed Up COPE</description>
        <inlineHelpText>Total Signed Up COPE</inlineHelpText>
        <label>Total Signed up COPE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amount_COPE__c</fullName>
        <description>Total amount COPE raised</description>
        <inlineHelpText>Total amount COPE raised</inlineHelpText>
        <label>Total amount COPE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NEO Facility Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NEO-{0000000000}</displayFormat>
        <label>NEO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEO Facility Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>